# herald

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  flake.nix  release.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_backend.md
.github/workflows/: ci.yml  release.yml  update-release-hashes.yml
docs/: operations.md
nix/: release.json
src/: config.rs  dns_server.rs  integration_tests.rs  main.rs  rate_limit.rs  rfc2136_test_helpers.rs  rfc2136_util.rs  telemetry.rs  testing.rs  tls.rs  tsig.rs  zone_util.rs
src/api/: acme.rs  auth.rs  dns.rs  dyndns.rs  error.rs  health.rs  mod.rs  reconcile.rs  records.rs
src/backend/: cloudflare.rs  mod.rs  rfc2136.rs  technitium.rs  technitium_util.rs
src/dns_server/: error.rs  mod.rs  prereqs.rs  tests.rs  update.rs  wire.rs
src/provider/: mirror.rs  mod.rs  record_type.rs  record_value.rs  static.rs
src/provider/acme/: mod.rs
src/provider/dynamic/: mod.rs
src/reconciler/: mod.rs
src/storage/: mod.rs
