[package]
name = "herald-dns"
version = "0.3.1"
edition = "2024"
description = "DNS control plane for multi-provider record management with ACME challenge proxy"
license = "MIT"
rust-version = "1.88"
repository = "https://github.com/Aneurysm9/herald"
homepage = "https://github.com/Aneurysm9/herald"
keywords = ["dns", "cloudflare", "acme", "technitium", "reconciliation"]
categories = ["network-programming"]
readme = "README.md"

[[bin]]
name = "herald"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# HTTP client (for Cloudflare & Technitium APIs)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }

# TLS for API server
tokio-rustls = "0.26"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Config
figment = { version = "0.10", features = ["yaml", "env"] }

# DNS
hickory-resolver = { version = "0.26", default-features = false, features = ["tokio", "system-config"] }
hickory-proto = { version = "0.26", default-features = false, features = ["dnssec-ring"] }
hickory-net = { version = "0.26", default-features = false, features = ["tokio", "dnssec-ring"] }
hickory-server = { version = "0.26", default-features = false, features = ["dnssec-ring"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Auth (HMAC-based token index for O(1) constant-time-safe lookups)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
base64 = "0.22"

# Async stream combinators (used for AXFR zone transfer streaming)
futures-util = "0.3"

# Human-readable duration parsing (e.g., "1m", "5m30s")
humantime = "2"

# Regex support (used for mirror transforms)
regex = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Database (for dynamic DNS and ACME persistence)
rusqlite = { version = "0.32", features = ["bundled"] }

# OpenTelemetry
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["metrics", "http-proto"] }
governor = "0.10.4"
dashmap = "6.1.0"

[dev-dependencies]
axum-test = "17"
wiremock = "0.6"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# The Named trait returns &str (not &'static str) because some impls (e.g.,
# TechnitiumBackend) return borrowed String fields. Clippy fires on impls
# that return string literals, but trait conformance requires &str.
unnecessary_literal_bound = "allow"

[profile.release]
lto = true
strip = true
codegen-units = 1
